# bim-graph

./: .gitignore  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: ablation_results.json  benchmark_results.csv  benchmark_results.json  bm25_index.pkl
data/chroma_db/: chroma.sqlite3
scripts/: download_ifc_samples.py
src/: config.py
src/agent/: graph.py  nodes.py  run.py  state.py  token_stream.py
src/agent/data/chroma_db/: chroma.sqlite3
src/api/: __init__.py  main.py
src/baseline/: rag_query.py
src/benchmark/: __init__.py  baseline_runner.py  ifc_oracle.py  query_set.json  run_ablation.py  run_benchmark.py
src/cache/: redis_cache.py
src/graph_db/: loader.py  queries.py
src/indexer/: bm25_index.py  chroma_indexer.py  naive_chunker.py  spatial_indexer.py
src/observability/: logging.py
src/parser/: ifc_parser.py
tests/: conftest.py
tests/unit/: test_cache.py  test_generate_node.py  test_graph_db.py  test_graph_routing.py  test_ifc_parser.py
ui/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/benchmark/: page.tsx
ui/components/: IfcViewer.tsx
