[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bim-graph"
version = "0.1.0"
description = "BIM-Graph is a self-healing agentic RAG pipeline for BIM spatial queries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "langchain>=0.2",
    "langchain-community>=0.2",
    "langchain-groq>=0.1",
    "langchain-ollama>=0.1",
    "langgraph>=0.1",
    "chromadb>=0.5",
    "rank-bm25>=0.2",
    "ifcopenshell",
    "redis>=5",
    "fakeredis>=2",
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-dotenv>=1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
    